--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,8 @@ dependencies {
 
     // swipe refresh layout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    // for drawable tint on lower api level
+    implementation "androidx.appcompat:appcompat:1.5.0"
+
 }
