--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.TimeBasedLocker"
         tools:targetApi="31">
         <activity
+            android:name=".ui.ShowSavedFiles.SavedFilesActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.videos.VideoPlayerActivity"
             android:exported="false" />
         <activity
